# FactReasoner

./: .gitignore  MANIFEST.in  README.md  markov_network_ac21cb9a-3cb5-11f1-a6ff-baa78c26480f.uai  markov_network_e84205dc-3cb9-11f1-bfa9-baa78c26480f.uai  orchestrate.py  orchestrate.sh  pyproject.toml  pytest.ini  test.py
data/: WikiContradict_HumanEval_adjudication.json  wiki_contradict_refined.jsonl  wiki_contradict_simple_humaneval.jsonl  wikicontradict.json
docs/assessors/: ex_factreasoner.py  ex_factscore.py  ex_factverify.py  ex_veriscore.py  factreasoner_output.json  factscore_output.json  factverify_output.json  flaherty_wikipedia.json
docs/atomizer/: ex_atomizer.py
docs/core/: ex_nli.py  ex_query.py  ex_retriever.py  ex_reviser.py  ex_summarizer.py
docs/examples/assessors/: ex_factreasoner.md  ex_factreasoner.py  ex_factreasoner_file.md  ex_factreasoner_file.py  ex_factscore.md  ex_factscore.py  ex_factscore_file.md  ex_factscore_file.py  ex_factverify.md  ex_factverify.py  ex_factverify_file.md  ex_factverify_file.py  ex_veriscore.md  ex_veriscore.py  ex_veriscore_file.md  ex_veriscore_file.py  factreasoner_output.json  factscore_output.json  factverify_output.json  veriscore_output.json
docs/examples/core/: ex_atomizer.md  ex_atomizer.py  ex_context_retriever.md  ex_context_retriever.py  ex_nli.md  ex_nli.py  ex_query.md  ex_query.py  ex_retriever.md  ex_retriever.py  ex_retriever_fast.md  ex_retriever_fast.py  ex_reviser.md  ex_reviser.py  ex_summarizer.md  ex_summarizer.py
docs/examples/correctors/: ex_llm2.py
examples/: flaherty_google.json  test.json
notebooks/: analysis.ipynb  atom_extractor.ipynb  atomizer.ipynb  climate_demo.ipynb  comprehensiveness_test.ipynb  retriever.ipynb  reviser.ipynb  wiki_contradict_data.ipynb
results/: experiment_notes.md  wiki_contradict_humaneval_comprehensiveness_e2e-base_ng_v12_Qwen2-5-72B-Instruct_rt-3.5_dp-False_tools-True.dill  wiki_contradict_humaneval_comprehensiveness_e2e-base_ng_v12_gpt-oss-120b_rt-3.5_dp-False_tools-True.dill  wiki_contradict_humaneval_comprehensiveness_e2e-base_ng_v12_gpt-oss-20b_rt-3.5_dp-False_tools-True.dill  wiki_contradict_humaneval_comprehensiveness_e2e-base_ng_v12_llama-3-3-70b-instruct_rt-3.5_dp-False_tools-True.dill  wiki_contradict_humaneval_comprehensiveness_e2e-base_ng_v12_llama-4-maverick-17b-128e-instruct-fp8_rt-3.5_dp-False_tools-True.dill  wiki_contradict_humaneval_comprehensiveness_e2e_ng_v12_Qwen2-5-72B-Instruct_rt-3.5_dp-False_tools-False.dill  wiki_contradict_humaneval_comprehensiveness_e2e_ng_v12_Qwen2-5-72B-Instruct_rt-3.5_dp-False_tools-True.dill  wiki_contradict_humaneval_comprehensiveness_e2e_ng_v12_gpt-oss-120b_rt-3.5_dp-False_tools-False.dill  wiki_contradict_humaneval_comprehensiveness_e2e_ng_v12_gpt-oss-120b_rt-3.5_dp-False_tools-True.dill  wiki_contradict_humaneval_comprehensiveness_e2e_ng_v12_gpt-oss-20b_rt-3.5_dp-False_tools-False.dill  wiki_contradict_humaneval_comprehensiveness_e2e_ng_v12_gpt-oss-20b_rt-3.5_dp-False_tools-True.dill  wiki_contradict_humaneval_comprehensiveness_e2e_ng_v12_llama-3-3-70b-instruct_rt-3.5_dp-False_tools-False.dill  wiki_contradict_humaneval_comprehensiveness_e2e_ng_v12_llama-3-3-70b-instruct_rt-3.5_dp-False_tools-True.dill  wiki_contradict_humaneval_comprehensiveness_e2e_ng_v12_llama-4-maverick-17b-128e-instruct-fp8_rt-3.5_dp-False_tools-False.dill  wiki_contradict_humaneval_comprehensiveness_e2e_ng_v12_llama-4-maverick-17b-128e-instruct-fp8_rt-3.5_dp-False_tools-True.dill
src/fact_reasoner/: __init__.py  argumentation_framework.py  assessor.py  atom_extractor.py  atom_reviser.py  batch_atom_reviser.py  bedrock.py  comprehensiveness.py  context_retriever.py  context_summarizer.py  corrector.py  coverage_evaluator.py  fact_components.py  fact_graph.py  fact_reasoner.py  fact_score.py  fact_utils.py  factreasoner.py  json_nli_extractor.py  llm_handler.py  nli_extractor.py  output_generator.py  prompts.py  qag_processor.py  qag_utils.py  query_builder.py  query_context_summarizer.py  relevance_estimator.py  search_api.py  test_mellea.py  utils.py  version.py
src/fact_reasoner/baselines/: __init__.py  factscore.py  factverify.py  veriscore.py
src/fact_reasoner/configs/: models.yaml
src/fact_reasoner/core/: __init__.py  atomizer.py  base.py  nli.py  (+6 more)
tests/: conftest.py  test_assessor.py  test_fact_graph.py  test_search_api.py  test_utils.py
tests/baselines/: __init__.py  test_factscore.py  test_veriscore.py
tests/core/: __init__.py  test_atomizer.py  test_nli.py  test_query_builder.py  test_retriever.py  test_reviser.py  test_summarizer.py  test_utils.py
(+1 files in other folders)
