[build-system]
requires = ["setuptools>=69", "wheel"]

[project]
name = "fact_reasoner"
version = "0.5.0"
description = "Factuality Assessment for Foundation Models"
authors = [
    {name = "Radu Marinescu",email = "radu.marinescu@ie.ibm.com"},
    {name = "Javier Carnerero Cano",email = "javier.cano@ibm.com"},
    {name = "Massimiliano Pronesti",email = "massimiliano.pronesti@ibm.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "pandas",
    "tqdm",
    "nltk",
    "networkx",
    "protobuf",
    "sentencepiece",
    "transformers",
    "python-dotenv",
    "matplotlib",
    "rank_bm25",
    "pgmpy",
    "spacy",
    "helper-utils",
    "langchain",
    "langchain-community",
    "wikipedia",
    "chromadb",
    "beautifulsoup4",
    "lxml",
    "pypdf2",
    "html2text",
    "thefuzz",
    "langchain_huggingface",
    "mellea",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build", "twine"]

[project.urls]
Source = "https://github.com/IBM/FactReasoner"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "tests.*"]
namespaces = false
