[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fact_reasoner"
version = "0.5.5"
description = "Factuality Assessment for Foundation Models"
authors = [
    {name = "Radu Marinescu", email = "radu.marinescu@ie.ibm.com"},
    {name = "Javier Carnerero Cano", email = "javier.cano@ibm.com"},
    {name = "Massimiliano Pronesti", email = "massimiliano.pronesti@ibm.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "beautifulsoup4",
    "chromadb",
    "langchain-community",
    "langchain-core",
    "langchain-huggingface",
    "langchain-text-splitters",
    #"mellea>=0.3.2",
    "mellea",
    "networkx",
    "nltk",
    "numpy",
    "pandas",
    "pgmpy",
    "pypdf2",
    "pyparsing",
    "python-dotenv",
    "pyyaml",
    "requests",
    "thefuzz",
    "torch",
    "tqdm",
    "transformers",
    "wikipedia"

]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build", "twine"]

[project.urls]
Source = "https://github.com/IBM/FactReasoner"

[tool.hatch.build.targets.wheel]
packages = ["src/fact_reasoner"]

[tool.hatch.build.targets.sdist]
exclude = ["docs/", "data/", "lib/", "tests/"]

[tool.uv.sources]
mellea = { git = "https://github.com/leothomas/mellea.git", rev = "bedrock_aws_access_key_id" }
